--- a/style.css
+++ b/style.css
@@ -1,6 +1,50 @@
-h1{text-align: center;
+
+.txt-c{
+    text-align: center;
 
 }
+
+.titulo-p{
+    padding-left: 20px;
+
+}
+
 p{
     text-align: center;
+}
+
+em strong{
+    color: #ff0000;
+}
+
+img{
+    width: 100%;
+    height: 950px;
+}
+
+.itens{
+    font-style: italic;
+}
+.principal{
+    background: #cccccc;
+    padding: 30px;
+    
+}
+
+.beneficios{
+    background: #ffffff;
+    padding: 20px;
+}
+
+ul{
+    display: inline-block;
+    vertical-align: top;
+    width: 20%;
+    margin-right: 15%;
+
+}
+
+.img-b{
+    width: 50%;
+    height: 550px;
 }
